@@ -1,9 +1,4 @@
 class FlashMessage {
-	static displayRequestFailure(status, exception, modal) {
-		console.log('request failure. Status: ', status, ' Exception: ', exception);
-		this.display('danger', typeof labelErrorOccured != 'undefined' ? labelErrorOccured :  "Une erreur s'est produite.", false, modal);
-	}
-
 	static displaySuccess(message, reload, modal) {
 		this.display('success', message, reload, modal);
 	}
@@ -32,6 +27,13 @@ class FlashMessage {
 			document.location.reload();
 		}
 	}
+
+	/** @deprecated **/
+	static displayRequestFailure(status, exception, modal) {
+		console.log('request failure. Status: ', status, ' Exception: ', exception);
+		this.display('danger', typeof labelErrorOccured != 'undefined' ? labelErrorOccured :  "Une erreur s'est produite.", false, modal);
+	}
+
 }
 
 module.exports = { FlashMessage };
